tag별 검색결과

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
+<meta charset="UTF-8">
 <div class="container">
     <form action="/members/new" method="post">
         <div class="form-group">
