--- a/src/main/resources/templates/questions/searchList.html
+++ b/src/main/resources/templates/questions/searchList.html
@@ -28,7 +28,9 @@
         </table>
 
 
-        <table>
+        <table><!--내용 찾기에 대한 코드
+
+                    -->
 
             <thead>
             <tr>
@@ -49,5 +51,6 @@
             </span>
             </tbody>
         </table>
+
     </div>
 </div>
