--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<style>
+    .top_bar{
+        position:fixed;
+        left:0;top:0;right:0;
+        height:50px;
+    }
+    .left_bar{
+        position:fixed;
+        left:0;top:50px;bottom:0;
+        width:50px;
+    }
+    ul{
+        list-style-type:none;
+        background-color: antiquewhite;
+        width:25%;
+        padding:0;
+        margin:0;
+        position:fixed;
+        height:auto;
+        overflow:auto;
+    }
+    li a{
+        display:block;
+        color:#000;
+        padding:8px 15px 8px 15px;
+        font-weight: bold;
+    }
+    .left{
+        grid-column: 1/3;
+    }
+    .center {
+
+        grid-column: 2 / 3; /* spans the second column */
+    }
+    .right {
+        grid-column: 3/ 3; /* spans the third column */
+    }
+    .grid-container {
+        display: grid;
+        grid-template-columns: 20% 55% 25%; /* sets the width of each column */
+    }
+    .top{
+
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -14,15 +59,24 @@
             <a href="/members">회원 목록</a>
             <a href="/questions/new">질문 작성</a>
             <a href="/questions/questionList">질문리스트</a>
+
         </p>
     </div>
 
 </div>
 
-<div style="height: 50px;"></div>
-<form action="/search"     style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;"  method="post">
+<form action="/search"     style="display:flex; width:50%; margin:auto; background-color: beige; height: 50px; align-items: center; justify-content: center;"  method="post">
     <input style="width:80%; height: 80%" type="text" name="search" placeholder="Search"/>
     <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
+
+<div class="left">
+    <ul><h2>태그별 검색</h2>
+        <li><a href="/questions/tagList?tags=pawnable">Pawnable</a></li>
+        <li><a href="/questions/tagList?tags=rev">Reversing</a></li>
+        <li><a href="/questions/tagList?tags=web">Web</a></li>
+        <li><a href="/questions/tagList?tags=crypto">Crypto</a></li>
+    </ul>
+</div>
 </body>
 </html>
