--- a/src/main/resources/templates/questions/questionList.html
+++ b/src/main/resources/templates/questions/questionList.html
@@ -1,22 +1,29 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<meta charset="UTF-8">
 <div class="container">
     <div>
-        <table>
+
+        <table class="table table-hover">
+           <!--
             <thead>
             <tr>
-                <th>#</th>
+                <th>글번호</th>
+                <th>작성자</th>
                 <th>질문글</th>
+                <th>조회수</th>
             </tr>
             </thead>
+            -->
             <tbody>
             //ask list
             <tr th:each="ask : ${asks}">
                 <td>
                     <a th:text="${ask.title}" th:href="@{'/questions/'+ ${ask.no}}" ></a>
                 </td>
-                                <td th:text="${ask.contents}"></td>
+                <td th:text="${ask.contents}"></td>
                 <td th:text="${ask.tags}"></td>"
             </tr>
             </tbody>
