--- a/src/main/resources/templates/questions/write.html
+++ b/src/main/resources/templates/questions/write.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-
+  <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
   <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
 <div style="display:flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-  <form action="/questions/new/questionList" method="post" style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 50%; height: 50%;">
+  <form action="/questions/questionList" method="post" style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 50%; height: 50%;">//question/new/questionList에서 바꿈
     <div style="margin: 10px;">
       <input type="text" id="title" name="title" placeholder="제목을 입력하세요" style="width: 100%; height: 30px; font-size: 18px;">
     </div>
