--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,6 @@
         <p>회원 기능</p>
         <p>
             <a href="/members/new">회원 가입</a>
-            <a href="/login/loginForm">로그인</a>
-
             <a href="/members">회원 목록</a>
             <a href="/questions/new">질문 작성</a>
             <a href="/questions/questionList">질문리스트</a>
@@ -22,8 +20,8 @@
 </div>
 
 <div style="height: 50px;"></div>
-<form action="/search"     style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;"  method="post">
-    <input style="width:80%; height: 80%" type="text" name="search" placeholder="Search"/>
+<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
+    <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
     <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
 </body>
