--- a/src/main/resources/templates/questions/write.html
+++ b/src/main/resources/templates/questions/write.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div style="height: 50px;"></div>
-<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
-  <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
+<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/searchList}" method="post">
+  <input style="width:80%; height: 80%" type="text" name="contents" placeholder="Search"/>
   <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
 <div style="display:flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
